--- a/randoms/src/App.css
+++ b/randoms/src/App.css
@@ -1,38 +1,77 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.card-wrapper{
+  border: 1px solid;
+  margin: 1rem;
+  padding: 1rem;
+  border-radius: 5px;
+  box-shadow: 5px 5px 0px 0px #289fed, 10px 10px 0px 0px #5fb8ff, 
+  15px 15px 0px 0px #a1d8ff, 20px 20px 0px 0px #cae6ff,
+  25px 25px 0px 0px #e1eeff, 5px 5px 27px 5px rgba(255, 253, 181, 0);
+  width: 500px;
+  background-image: radial-gradient(
+    circle,
+  #f0edda,
+  #d2e6d1,
+  #b1ddd4,
+  #99d2df,
+  #9ac1e5);
+}
+.header{
+  font-size: 1.5em;
+  width: 60%;
+
+
+}
+.icon{
+  width: 35px;
+
+}
+.par-container{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+
+
+}
+.par{
+  width: 50%;
+  font-size: 1.2rem;
+
+
+}
+.header-container{
+  display: flex;
+  align-items: center;
+  margin-left: 1.5rem;
+
+
+}
+button{
+  border: none;
+  border-radius: 3px;
+  background-color: #289fed;
   color: white;
-}
+  padding: 1rem;
+  font-size: 1.3rem;
+  cursor: pointer;
+  margin: 25px;
+  transition: all 0.5s ease-in-out;
 
-.App-link {
-  color: #61dafb;
 }
+button:hover{
+  background-color: #ededd9;
+  color: black;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.header-container img{
+  border-radius: 50%;
+
 }
